[package]
authors = ["Fuel Labs <contact@fuel.sh>"]
categories = ["concurrency", "cryptography::cryptocurrencies", "emulators"]
homepage = "https://fuel.network/"
keywords = ["blockchain", "cryptocurrencies", "fuel-vm", "fuel-core"]
license = "BUSL-1.1"
repository = "https://github.com/FuelLabs/fuel-core-client-ext"
description = "Extension trait for fuel-core-client "
name = "fuel-core-client-ext"
version = "0.32.1"
edition = "2021"
build = "build.rs"

[dependencies]
async-trait = "0.1"
cynic = { version = "2.2", features = ["http-reqwest"] }
fuel-core-client = "0.32.1"
fuel-core-types = "0.32.1"
serde = { version = "1.0.209", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1.36.0", features = ["full"] }
csv = "1.1.0"

[build-dependencies]
fuel-core-client = "0.32.1"
